fix logo staying dark in dark mode, instead of green

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,10 @@
     --background: #0a0a0a;
     --foreground: #c5ff00;
   }
+
+  .logo path {
+    fill: var(--foreground)
+  }
 }
 
 body {
